[package]
name = "mixing"
version = "0.1.0"
authors = ["Craig Chen <craigxchen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dyadic_periods"
crate-type = ["rlib", "dylib"]

[dependencies]
rayon = "1.5.0"